fix label spacing

--- a/src/components/TabNavigationMenu.css
+++ b/src/components/TabNavigationMenu.css
@@ -77,7 +77,7 @@
   cursor: pointer;
   font-size: 1.3rem;
   color: black;
-  margin-left: 1vw;
+  margin-left: 2vw;
   position: absolute;
   top: 50%;
   -ms-transform: translateY(-50%);
